# echo

./: .env.example  .gitignore  README.md  package.json  tsconfig.base.json
.claude/: settings.json
.claude/hooks/: safety_gate.py
apps/adapter-claude-code/: README.md  mappings.py  pyproject.toml  send_event.py
apps/adapter-claude-code/examples/: settings.full.json  settings.merge.jsonc
apps/adapter-claude-code/tests/: conftest.py  test_cli.py  test_config.py  test_envelope.py  test_http.py  test_mappings.py
apps/adapter-claude-code/tests/fixtures/: Notification.json  PermissionRequest.json  PostToolUse.json  PostToolUseFailure.json  PreCompact.json  PreToolUse.json  SessionEnd.json  SessionStart.json  Stop.json  SubagentStart.json  SubagentStop.json  UserPromptSubmit.json
apps/hitl-helper-python/: README.md  echo_hitl.py  pyproject.toml
apps/hitl-helper-python/examples/: hook_gate.py
apps/hitl-helper-python/tests/: __init__.py  test_echo_hitl.py  test_integration.py
apps/server/: package.json
apps/server/scripts/: run.sh
apps/server/src/: config.ts  index.ts
apps/server/test/: storage.test.ts  validate.test.ts  waiters.test.ts
docs/: adapter-guide.md  api.md  migration-cloud.md
openspec/specs/claude-code-adapter/: spec.md
openspec/specs/event-broadcast/: spec.md
openspec/specs/event-envelope/: spec.md
openspec/specs/event-ingestion/: spec.md
openspec/specs/event-storage/: spec.md
openspec/specs/hitl-helper/: spec.md
openspec/specs/human-in-the-loop/: spec.md
openspec/specs/safety-gate-hook/: spec.md
(+48 files in other folders)
